--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "canvastory",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://olyyarm.github.io/CANVA_STORY_/",
+
   "type": "module",
   "scripts": {
     "dev": "vite",
